# relentless-groove

./: .gitignore  README.md  relentless-groove.sln
ElmApp/: .env  elm-package.json  package-lock.json  package.json  webpack.config.js
ElmApp/public/: index.html  styles.css
ElmApp/src/: Main.elm  Model.elm  Ports.elm  Subscriptions.elm  Update.elm  View.elm  index.js
FableApp/: package-lock.json  package.json  paket.dependencies
FableApp/public/: index.html
FableApp/src/: App.fs  google-auth.js  paket.references
GiraffeApp/: GiraffeApp.fsproj  GiraffeApp.sln  Program.fs  appsettings.json
GiraffeApp/ElmApp/: .gitignore  elm-package.json  package.json  webpack.config.js
GiraffeApp/ElmApp/public/: index.html  manifest.json  styles.css
GiraffeApp/ElmApp/src/: Activity.elm  Main.elm  Model.elm  Subscriptions.elm  Update.elm  View.elm  index.js
GiraffeApp/ElmApp/test/: clearImposters.js  createImposters.js  imposter.js
GiraffeApp/Models/: Activity.fs
GiraffeApp/Views/: Index.cshtml
GiraffeApp/reason-app/: package.json
GiraffeApp/reason-app/src/: index.bs.js  index.re  menu.bs.js  menu.re  page.bs.js  page.re
Rust/: .gitignore  Cargo.toml
Rust/src/: main.rs
Rust/src/frontend/: Cargo.toml  main.rs  package.json  webpack.config.js
Rust/src/frontend/src/: main.rs
WebApp/Controllers/: HomeController.cs
src/: Program.fs  src.fsproj
src/Models/: Message.fs
