[package]
name = "hello_remote_world"
version = "0.1.0"
authors = ["VS Code <vscode@microsoft.com>"]
autobins = false

[[bin]]
name = "app"
path = "src/frontend/main.rs"
required-features = ["frontend"]

[dependencies]
yew = { version = "0.10.0", optional = true }

[features]
frontend = [
    "yew"
]